--- a/.gitignore
+++ b/.gitignore
@@ -64,4 +64,8 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
-MobileIMSDK4iLib/.DS_Store
+.DS_Store
+Example/Pods/
+Example/Example.xcworkspace
+Example/Podfile.lock
+Example/Example.xcodeproj/project.xcworkspace/contents.xcworkspacedata
